--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,9 @@
 @layer components {
 
     .Pregunton { @apply text-stone-700; }
-    .Pregunton h3 { @apply font-bold text-stone-800 mt-2; }
+    .Pregunton h2 { @apply italic text-stone-600 text-center border-b border-stone-300 my-1; }
+    .Pregunton h3 { @apply font-bold text-stone-800 my-1; }
     .Pregunton input[type=checkbox] { @apply mr-1; }
+    .Pregunton select { @apply bg-stone-50 mr-1 border-b border-orange-300; }
 
 }
